# linearizations

./: .gitignore  Cargo.toml  README.md  point_pick.sh  point_pick_save.sh  pyproject.toml
py/: add_fast_slow.py  add_sqrts.py  convert.py  find_ridges.py  make_curve_file.py  make_limits.py  pick_clusters.py  plot_smoothed.py
py/param_manager/: param_manager.py
script/: linearize.sh  point_pick.sh
src/: lib.rs  lowess.rs  param_manager.rs
