[package]
name = "auto_pid_paper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
itertools = "0.14.0"
itertools-num = "0.1.3"
linreg = "0.2.0"
nalgebra = "0.33.2"
polars = { version = "0.42.0", features = ["lazy", "parquet"] }
rand = "0.9.1"
rayon = "1.10.0"
