[project]
name = "auto-pid-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmasher>=1.9.2",
    "cmocean>=4.0.3",
    "datashader>=0.18.1",
    "hepconvert>=1.4.0",
    "lowess>=1.0.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "pretty-errors>=1.2.25",
    "pyarrow>=20.0.0",
    "pyqt5>=5.15.11",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.10",
    "ruff-lsp>=0.0.62",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "statsmodels>=0.14.4",
    "tcl>=0.2",
    "tk>=0.1.0",
    "tqdm>=4.67.1",
]
